--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My first Github repo</title>
 </head>
 <body>
-    
+    <h1>Here is first the program to push in github</h1>
+    <h2>Need to practice more</h2>
+    <h3>And work hard</h3>
+
 </body>
 </html>
