--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first Github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Here is first the program to push in github</h1>
     <h2>Need to practice more</h2>
     <h3>And work hard</h3>
+    <p>Here is a paragraph</p>
+    <p>Here is another one</p>
 
 </body>
 </html>
