--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h3>And work hard</h3>
     <p>Here is a paragraph</p>
     <p>Here is another one</p>
+    <img src="rog-red-logo-4k-f3-1366x768.jpg" alt="">
+    <img src="wallpapersden.com_zenitsu-agatsuma-demon-slayer_1366x768.jpg" alt="">
 
 </body>
 </html>
